--- a/css/styles.css
+++ b/css/styles.css
@@ -36,5 +36,14 @@
     color: #0f0f0f;
 }
 
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
+
+.navbar-inverse {
+     background-color: #512DA8;
+}
+
 
 
